之前的封面图太大了，导致网站加载很慢

--- a/source/_posts/程序棋盘格效果实现.md
+++ b/source/_posts/程序棋盘格效果实现.md
@@ -3,7 +3,7 @@ tags: ['demo','Unreal','shader']
 title: 程序棋盘格效果实现
 date: '2022-01-21'
 categories: 探索发现
-cover: https://raw.githubusercontent.com/Guiny-Time/PictureBed/main/20220121223454.png
+cover: 20220121223454.jpg
 ---
 
 &emsp;&emsp;为什么会写这篇文章呢...因为我已经在大大小小的场合中遇到三次相关的题目了，前几次答得挺不尽人意的。第一次是在剑心互娱的校招笔试上，要求画一个黑灰白三条杠（下左），第二次是字节的二面要求画一个棋盘格的效果（下右），还有一次忘了（
