--- a/source/_posts/项目作品集汇总.md
+++ b/source/_posts/项目作品集汇总.md
@@ -222,6 +222,15 @@ top: true
 # 其他
 {% timeline ## 2024,color %}
 <!-- timeline ### 《The Shader Bible》全书翻译 -->
+![](USB.png)
+
 <a href="https://zhuanlan.zhihu.com/p/645676077">【翻译】Unity Shader Bible/Unity着色器圣经 全书目录 - 几何冰川的文章 - 知乎</a>
+<!-- endtimeline -->
+
+<!-- timeline ### 基于 Blender 几何节点的程序化建模尝试 -->
+![](flower.png)
+这是我为一门课程的结课作业所做的验证，在对节点参数进行微调后成功得到了多种花朵类型。
+这是最终成品↓
+![](微信图片_20240721183048.jpg)
 <!-- endtimeline -->
 {% endtimeline %}
