--- a/study_notes/source/_posts/排序算法之快归希堆.md
+++ b/study_notes/source/_posts/排序算法之快归希堆.md
@@ -149,9 +149,9 @@ $$D_m = N/2, D_k = D_{k+1}/2$$
 ### 为什么说希尔排序突破了O(n^2)级算法？
 排序算法本质上就是一个消除**逆序对**的过程。
 
-对于随机数组，逆序对的数量是O(N^2)级的，如果采用「交换相邻元素」的办法来消除逆序对，每次最多只能消除一组逆序对，因此必须执行O(N^2)级的交换次数，这就是为什么冒泡、插入、选择算法只能到 O(N^2) 级的原因。反过来说，基于交换元素的排序算法要想突破O(N^2)级，必须通过一些比较，交换间隔比较远的元素，使得一次交换能消除一个以上的逆序对。
+对于随机数组，逆序对的数量是 O(N^2^) 级的，如果采用「交换相邻元素」的办法来消除逆序对，每次最多只能消除一组逆序对，因此必须执行 O(N^2^) 级的交换次数，这就是为什么冒泡、插入、选择算法只能到 O(N^2^) 级的原因。反过来说，基于交换元素的排序算法要想突破 O(N^2^) 级，必须通过一些比较，交换间隔比较远的元素，使得一次交换能消除一个以上的逆序对。
 
-希尔排序算法就是通过这种方式，打破了在空间复杂度为O(1) 的情况下，时间复杂度为O(N^2) 的魔咒，此后的快排、堆排等等算法也都是基于这样的思路实现的。
+希尔排序算法就是通过这种方式，打破了在空间复杂度为 O(1) 的情况下，时间复杂度为 O(N^2^) 的魔咒，此后的快排、堆排等等算法也都是基于这样的思路实现的。
 
 ## 堆排序/Heap Sort
 - Unstable/In-place
@@ -436,7 +436,18 @@ public int partitionRandom(int[] arr, int start, int endd){
 <!-- endtab -->
 
 <!-- tab 双轴快排 -->
+双轴快排（Dual-Pivot Quicksort）的思路在于通过两个pivot（p1 与 p2），在一次遍历结束后划分出三个区域（确定了两个 pivot 的最终位置），然后再利用分治思想处理新区域。但是在这个执行过程应该去如何处理分析呢？需要几个参数呢？
 
+<img src="https://www.javacodegeeks.com/wp-content/uploads/2013/06/Optimized-DualPivot.png.jpg" />
+
+- 假设知道排序区间[start, end]、数组为arr，则我们可以设置 p1 = arr[start], p2 = arr[end]。
+- 同时还需要三个参数：left，right 和 k。
+- left 初始为 start，[start, left]区域即为小于等于 p1 的区域(第一个等于)。
+- right 初始为 end，[right, end]为大于等于 p2 的区域(最后一个等于)。
+- k初始为start + 1，是一个从左往右遍历的指针，遍历的数值与 p1，p2 比较进行适当交换，当k >= right即可停止。
+
+另附文章：https://cloud.tencent.com/developer/article/1745880
+上文讲的很清楚，这里就不过多赘述了。
 <!-- endtab -->
 {% endtabs %}
 
@@ -487,7 +498,7 @@ private static void swap(Object[] arr, int i, int j) {
 元素的交换可能会出现**新的逆序**。
 
 {% note info 快速排序挖坑法 %}
-除了前面介绍的几种方法之外，快速排序还有一种“挖坑法”：
+除了前面介绍的几种方法之外，快速排序还有一种“挖坑法（三数中值法）”：
 <img src="https://img14.360buyimg.com/ddimg/jfs/t1/195687/19/44108/47560/65f90331F9ed846df/6ebd095fb2fd6b6c.jpg" alt="挖坑法" title="挖坑法" />
 {% endnote %}
 
@@ -571,7 +582,7 @@ private static int[] divide(int[] arr, int start, int end) {
 <!-- tab 优化：减少临时空间开辟 -->
 在第一种写法中，我们在递归的过程在开辟了不少用于临时储存子数组的**left**和**right**，存在可优化的空间。为了减少在递归过程中不断开辟空间的问题，我们可以在归并排序之前，先开辟出一个临时空间**result**，在递归过程中统一使用此空间进行归并。
 ```Java
-public static int[] void mergeSort(int[] arr) {
+public static int[] mergeSort(int[] arr) {
     if (arr.length == 0) return;
     int[] result = new int[arr.length];
     divide(arr, 0, arr.length - 1, result);
