--- a/source/_posts/水面、波浪和白沫.md
+++ b/source/_posts/水面、波浪和白沫.md
@@ -2,8 +2,9 @@
 tags: ['demo','Unity','ShaderLab','shader','水体']
 title: 水面、波浪、白沫和焦散
 date: '2022-09-13T08:20:39.263Z'
-katex: true
 cover: https://ae01.alicdn.com/kf/Scf892eeb5b6b48d882948552f796fcd6T.gif
+copyright_author: 时光
+katex: true
 ---
 {% note info simple %}
 **请注意**
