--- a/source/_posts/菲涅尔反射实现边缘光效果.md
+++ b/source/_posts/菲涅尔反射实现边缘光效果.md
@@ -3,7 +3,7 @@ tags: ['Unity','ShaderLab','shader','demo']
 title: 菲涅尔反射实现边缘光效果
 date: '2022-01-17'
 categories: 探索发现
-cover: https://raw.githubusercontent.com/Guiny-Time/PictureBed/main/20220117144049.png
+cover: 20220117144049.jpg
 ---
 
 在之前的项目中，我从网上抓了一个用菲涅尔反射写的边缘光shader。经过自己的魔改之后，加上了法线等用在后续的项目中。现在我们回过头来探寻一下菲涅尔效应是如何用来实现边缘光的。
