关闭了导致内存爆炸的特效

--- a/source/_posts/贴地雾效实现.md
+++ b/source/_posts/贴地雾效实现.md
@@ -3,7 +3,7 @@ title: 贴地雾效实现
 tags: ['Unity','ShaderLab','shader','demo']
 categories: 探索发现
 date: '2022-02-07T08:20:39.263Z'
-cover: https://raw.githubusercontent.com/Guiny-Time/PictureBed/main/20220207004948.png
+cover: 20220207004948.png
 ---
 
 &emsp;&emsp;接上篇文章画的饼，这回我打算试着实现一下雾效，我们最终的目标就是实现类似下图的效果。当然，纪念碑谷中的不怎么被雾影响的方块和浸泡在雾气中的方块使用的应该是两种shader，他们不会混在一起。但如果我们要实现的是一个可以移动的场景呢？使用我想在纪念碑谷的静态贴地雾效上加点东西，即：当摄像机移动时，雾的范围会随着摄像机的移动而移动，始终做到远处模糊、近处清晰的效果。
