修复updated的问题

--- a/source/_posts/§1-1：渲染流水线.md
+++ b/source/_posts/§1-1：渲染流水线.md
@@ -3,7 +3,7 @@ tags: ['TA', 'Unity Shader', '计算机图形学']
 title: §1-1：渲染流水线
 categories: 计算机图形学
 date: 2021-07-13
-update: 2021-10-22
+updated: 2021-10-22
 cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA3ab332888e0df4ce1aeb54cabf9ba62b.png
 ---
 
