还原LD观察者文章

--- a/source/_posts/§1-2：数学基础.md
+++ b/source/_posts/§1-2：数学基础.md
@@ -55,14 +55,14 @@ cover: 99051595_p0.jpg
 - 当我们知道坐标时，可以有(x1, y1, z1) · (x2, y2, z2) = (y1z2-z1y2, x1z2-z1x2, x1y2-y1x2)
 - 当**a**和**b**平行，即$sin\theta = 0$，我们将得到一个零向量
 
-> 叉乘的应用
+> **叉乘的应用**
 &emsp;&emsp;我们通过片元上顶点是顺时针还是逆时针来判断这个片元是正对我们的还是背对我们的。可以利用叉乘带来的方向来判断三角形的三个顶点是顺时针还是逆时针
 
 # 矩阵
 <img src="https://raw.githubusercontent.com/Guiny-Time/PictureBed/main/20210922162011.png" width=260 style="float:right"/>
 
 &emsp;&emsp;矩阵就是像这样由行和列组成的一组数据，本质上也是数组，不过是二维的。右图是一个3*3的方矩阵，矩阵的行和宽可以是0，这时候就变成了一维的行矩阵、列矩阵或者什么都没有的0矩阵了。
-&emsp;&emsp;我们一般用m~ij~来表示第i行j列的矩阵元素
+&emsp;&emsp;我们一般用m\[i\]\[j\]来表示第i行j列的矩阵元素
 ## 标量乘除
 &emsp;&emsp;同样的，我们在进行矩阵运算的时候也要考虑其中的几何意义。
 &emsp;&emsp;矩阵与标量的乘除法相当于整体扩充或者缩小的矩阵，我们将矩阵的每个元素都乘上/除以标量
