--- a/source/_posts/水面、波浪和白沫.md
+++ b/source/_posts/水面、波浪和白沫.md
@@ -1,16 +1,12 @@
 ---
 tags: ['demo','Unity','ShaderLab','shader','水体']
-categories: 计算机图形学
+categories: 效果实现
 title: 水面、波浪、白沫和焦散
 date: '2022-09-13T08:20:39.263Z'
-cover: https://ae01.alicdn.com/kf/Scf892eeb5b6b48d882948552f796fcd6T.gif
+cover: Scf892eeb5b6b48d882948552f796fcd6T.gif
 copyright_author: 时光
 katex: true
 ---
-{% note info simple %}
-**请注意**
-由于微博图床外链失效，本文部分图片无法获取
-{% endnote %}
 
 # 介绍与准备
 我最近打算开始做毕设项目的场景啦XD！这个项目的名字叫元素宇宙(Elemental Universe)，是一个化学元素拟人世界观下的小宇宙的故事，目前只有我一个人在做，第一步是搭场景。主场景打算用polyBrush磨出来，其中有一些湖泊和海洋。海洋部分我打算用GerstnerWave的方法来做，湖泊部分采用本文所介绍的方法（当然，还有很多可以改进的地方。有改进的部分会在“更新说明”里提及）。
@@ -19,9 +15,10 @@ katex: true
 
 首先，准备一个细分好的平面（因为我们需要一定数量的顶点）作为水面。在这个项目中我使用的是：
 
-![](https://ae01.alicdn.com/kf/S4692442a6627441b8f9dc376338fa8376.png)
+![](S4692442a6627441b8f9dc376338fa8376.webp)
 
 演示模型来自Sketchfab，使用遵守CC版权协议。如下预览所示，模型原本的水面只是一块普通的、smooth值几乎设置为1的水平面：
+
 <div class="sketchfab-embed-wrapper"> <iframe title="Little Pond & fish" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/4f091bcb17ce42ee9a7e678a16ddc349/embed"> </iframe> <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a href="https://sketchfab.com/3d-models/little-pond-fish-4f091bcb17ce42ee9a7e678a16ddc349?utm_medium=embed&utm_campaign=share-popup&utm_content=4f091bcb17ce42ee9a7e678a16ddc349" target="_blank" style="font-weight: bold; color: #1CAAD9;"> Little Pond & fish </a> by <a href="https://sketchfab.com/motpanda?utm_medium=embed&utm_campaign=share-popup&utm_content=4f091bcb17ce42ee9a7e678a16ddc349" target="_blank" style="font-weight: bold; color: #1CAAD9;"> Kenny Kwok. </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=4f091bcb17ce42ee9a7e678a16ddc349" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a></p></div>
 
 # 波浪
@@ -36,18 +33,18 @@ $$vert.y += Height * sin(vert.x * Time * Speed)$$
 $$vert.y += Height * sin((vert.x + vert.z) * Time * Speed)$$
 在shader graph中，它表示为：
 
-<img src="https://tva4.sinaimg.cn/large/006UcwnJly1h65euevlmxj30uc0c5q5a.jpg" alt="image" width="1092" data-width="1092" data-height="437">
+<img src="006UcwnJly1h65euevlmxj30uc0c5q5a.jpg" alt="着色器图" width="1092" data-width="1092" data-height="437">
 
 最终连接到VertexShader的Position上，波浪搞定。
 
 # 水域分层与浮沫效果
 波浪完成之后，现在的水面是一种单色调的、不透明的、会动的面。
 
-![](https://ae01.alicdn.com/kf/S69deed0922c746a38b7c54834bc82de4n.png)
+![](S69deed0922c746a38b7c54834bc82de4n.webp)
 
 而见过一般水域的你都会认为一个漂亮的水域应该是下图的样子：
 
-![我想去度假](https://ae01.alicdn.com/kf/Saf5e78cc5f124768bc44ba1f487fab48D.png)
+![](Saf5e78cc5f124768bc44ba1f487fab48D.webp)
 
 这片水域的特点可以概括为以下几点：
 1. 有微微起伏的起伏
@@ -60,7 +57,7 @@ $$vert.y += Height * sin((vert.x + vert.z) * Time * Speed)$$
 ## 水域分层
 水域分层体现在越浅的水的颜色越透亮、越深的水颜色更深沉，颜色与深度有关。
 
-![海洋调色盘, created by Sherwin-Williams](https://ae01.alicdn.com/kf/S2a6d93e321774c3c9df197cdbde622cdS.png)
+![海洋调色盘, created by Sherwin-Williams](S2a6d93e321774c3c9df197cdbde622cdS.webp)
 
 如果获取到水域的深浅情况，就可以根据水深对颜色进行插值了。怎么求水深呢？假设水面顶点经过MV矩阵处理完的坐标为$\begin{pmatrix}x  \\y  \\z \\1 \end{pmatrix}$现在我们有：
 
@@ -68,40 +65,41 @@ $$vert.y += Height * sin((vert.x + vert.z) * Time * Speed)$$
 2. 原始(raw)屏幕空间位置的数据，从相机出发获取每一点的世界空间深度$-z$
 
 这里Z-Buffer里的值是非线性的，需要转换成眼空间下的线性深度值进行计算，在ShaderLab中使用的是LinearEyeDepth函数。如果我们把眼空间的场景深度减去原始(raw)屏幕空间位置的alpha值，就能获取到一个差值对深层水的颜色与浅层水的颜色进行插值。LinearEyeDepth的底层推导过程可以参考：https://zhuanlan.zhihu.com/p/157863844
-<img src="https://tva4.sinaimg.cn/large/006UcwnJly1h6665r2j4pj30p80dotce.jpg" alt="image" width="400" data-width="908" data-height="492">
+
+<img src="006UcwnJly1h6665r2j4pj30p80dotce.jpg" width="400" data-width="908" data-height="492">
 
 如果你觉得这个插值太刚硬了，可以加一个指数去调节，让颜色的过渡更平滑（这是我在刚做这个效果时没意识到的一个地方）。或者可以干脆新添加一个变量“陡峭程度”steep：
 
-<img src="https://tva3.sinaimg.cn/large/006UcwnJly1h666g1tvl3g30pd0ct1kz.gif" alt="steed" width="400" data-width="913" data-height="461">
+<img src="006UcwnJly1h666g1tvl3g30pd0ct1kz.gif" alt="steed效果演示" width="400" data-width="913" data-height="461">
 
 目前为止，fragment部分的shader graph长下图这样(请不要在意那些多出来的线，与后续步骤有关)。现在我们要在水域分割的基础上添加浮沫的效果啦。
 
-![片元着色器图](https://ae01.alicdn.com/kf/Sd28657e9e80c4052b50046d739726f75L.png)
+![片元着色器图](Sd28657e9e80c4052b50046d739726f75L.webp)
 
 {% note info simple %}
 **请注意**
 如果要获取深度图，需要在相机渲染设置里开启Depth Texture选项
-![](https://ae01.alicdn.com/kf/S170180ee88744e60ac7af1a4ec4914882.png)
+![](S170180ee88744e60ac7af1a4ec4914882.webp)
 {% endnote %}
 
 ### ScreenPosition节点的模式
 #### default模式
 光栅化的章节里我简单画了一个屏幕坐标系，当时以屏幕左下角为原点建系：
-![屏幕坐标系](https://ae01.alicdn.com/kf/Sc75208253a6042b4863c4b7c41fa11efo.png)
+![屏幕坐标系](Sc75208253a6042b4863c4b7c41fa11efo.webp)
 
-<img src="https://ae01.alicdn.com/kf/S7b1624e719aa46148fc70b8517bc6db4o.png" alt="ScreenPosition的default模式" width="300" data-width="918" data-height="513">
+<img src="S7b1624e719aa46148fc70b8517bc6db4o.webp" alt="ScreenPosition的default模式" width="300" data-width="918" data-height="513">
 
 事实上，default模式的屏幕空间坐标系也是这样建的。如果把ScreenPosition连到baseColor上输出，就能得到上图右所示的情况。该模式下节点只包含了屏幕上任何一像素的横纵坐标值。
 
 #### center模式
 center模式较于default模式将原点移动到了屏幕中心，该模式下节点依然只包含了屏幕上任何一像素的横纵坐标值。
 
-<img src="https://tva3.sinaimg.cn/large/006UcwnJly1h65ylh7odgj30pi0e90y7.jpg" alt="image" width="300" data-width="918" data-height="513">
+<img src="006UcwnJly1h65ylh7odgj30pi0e90y7.jpg" alt="ScreenPosition的center模式" width="300" data-width="918" data-height="513">
 
 #### tile模式
 “tile”的意思是平铺。以屏幕中心为原点，每256*256个像素作为一个单元进行平铺，该模式下节点依然只包含了屏幕上任何一像素的横纵坐标值。
 
-<img src="https://ae01.alicdn.com/kf/S53e001abf59e4d1e95a2e670e62c7847s.png" alt="ScreenPosition的tile模式" width="300" data-width="918" data-height="513">
+<img src="S53e001abf59e4d1e95a2e670e62c7847s.webp" alt="ScreenPosition的tile模式" width="300" data-width="918" data-height="513">
 
 #### raw模式
 raw模式即原始数据模式，与前面提到的三种模式都不同。raw模式是数据指每个顶点经过MVP矩阵变换之后、还未进行齐次除法的信息。第四个分量$w$，或者说$a$，代表了世界空间的深度，或者说眼空间深度(eye-space depth)。
@@ -122,39 +120,40 @@ $$
 
 可见这个结果与顶点自身有关，因为波浪中控制顶点进行运动，所以将ScreenPosition连到baseColor上输出的话结果是在不停地改变着的：
 
-<img src="https://tva4.sinaimg.cn/large/006UcwnJly1h65zecrlawg315u0mk1l5.gif" alt="raw" width="300" data-width="1506" data-height="812">
+<img src="006UcwnJly1h65zecrlawg315u0mk1l5.gif" alt="ScreenPosition的raw模式" width="300" data-width="1506" data-height="812">
 
 ## 浮沫
-<img src="https://tva4.sinaimg.cn/large/006UcwnJly1h666qcdcmij30xc0m8x0h.jpg" alt="image" width="500" data-width="1200" data-height="800">
+<img src="006UcwnJly1h666qcdcmij30xc0m8x0h.jpg" width="500" data-width="1200" data-height="800">
 
 浮沫（或者说白沫）指的是水域靠近岸边时产生的一系列白色泡沫边缘部分，常见于海边，适当的浮沫会让水域更生动。在前面的水域划分部分里，其实我们已经得到了被着色为浅水的部分，这部分正好对应岸边“应当聚集浮沫”的地方。那我们拿这个区域与浮沫的贴图相乘不就好了吗？没错。
 
 可以找心仪的噪声来模拟波浪，不同的噪声可以获得不一样的波浪效果：
 
-<img src="https://tva4.sinaimg.cn/large/006UcwnJly1h667eqrcvzg30pd0ctx6q.gif" alt="foam1" width="300" data-width="913" data-height="461" style="display:inline"><img src="https://tva3.sinaimg.cn/large/006UcwnJly1h667fonrxkg30pd0ct7wk.gif" alt="foam2" width="300" data-width="913" data-height="461" style="display:inline">
+<center><img src="006UcwnJly1h667eqrcvzg30pd0ctx6q.gif" alt="浮沫效果1" width="300" data-width="913" data-height="461" style="display:inline">
+<img src="006UcwnJly1h667fonrxkg30pd0ct7wk.gif" alt="浮沫效果2" width="300" data-width="913" data-height="461" style="display:inline"></center>
 
 首先，我们要让浮沫能够**“动起来”**。在把噪声纹理导入之后，使用Time节点修改纹理的UV偏移量就能实现。因为波浪的方向是斜着的，所以直接乘Time就行。这里我们可以给Time乘一个**浮沫速度**的变量以**控制噪声的运动速度**。同时，可以加一个变量**浮沫缩放**用来**控制噪声的缩放大小**。在Shader Graph中可以直接用TileAndOffset节点实现：
 
-<img src="https://tva3.sinaimg.cn/large/006UcwnJly1h6690cl21og30o009o1kx.gif" alt="noise" width="664" data-width="864" data-height="348">
+<img src="006UcwnJly1h6690cl21og30o009o1kx.gif" alt="着色器图" width="664" data-width="864" data-height="348">
 
 {% note info simple %}
 **请注意**
 如果要得到正确的、连续的贴图偏移/缩放效果，需要在贴图设置里修改平铺模式为Reapeat
-![image](https://tva4.sinaimg.cn/large/006UcwnJly1h668eqtrzfj30bp013glg.jpg)
+![](006UcwnJly1h668eqtrzfj30bp013glg.jpg)
 {% endnote %}
 
 现在，让噪声与浮沫水域（和浅水域很类似，但你可以自己定义一个FoamArea参数取代原本的Depth用来控制浮沫范围）部分相乘，得到的结果再与浮沫颜色根据浮沫水域范围进行插值（用来控制噪声的消隐）：
 
-<img src="https://ae01.alicdn.com/kf/S09c6cb2402104b63a3c38840a8994b92G.png" width="400" data-width="904" data-height="457">
+<img src="S09c6cb2402104b63a3c38840a8994b92G.webp" width="400" data-width="904" data-height="457">
 
 好丑啊！！！本身就模糊的噪声被直接贴上来了，各种意义上都有失美感。我们可以用Step函数滤掉一部分，获得一个较硬的浮沫边缘：
 
-<img src="https://ae01.alicdn.com/kf/S70bcff758bc54c61bf50bc61b53d59cfV.png" width="400" data-width="953" data-height="308">
+<img src="S70bcff758bc54c61bf50bc61b53d59cfV.webp" width="400" data-width="953" data-height="308">
 
 已经搞定了，不是吗？而且由于我们设置了独立于浅水域的浮沫水域，可以设置浮沫的范围：
 
-<img src="https://ae01.alicdn.com/kf/Sb99b8aae2b444fe2a6901178c46ead3b0.gif" alt="area" width="912" data-width="912" data-height="348">
-<img src="https://ae01.alicdn.com/kf/S94678975df4f4a4584d7a615feb774e49.png" width="1297" data-width="1297" data-height="462">
+<img src="Sb99b8aae2b444fe2a6901178c46ead3b0.gif" alt="我们还可以调整浮沫的范围" width="912" data-width="912" data-height="348">
+<img src="S94678975df4f4a4584d7a615feb774e49.webp" width="1297" data-width="1297" data-height="462">
 
 # 水体折射
 现在的水体虽然已经能够展示浮沫和深浅水域了，但是我们没法透过水域看到湖底的东西，也没有折射效果。根据光学原理，光在穿过不同介质的时候会发生折射现象，加上水面的扭曲，我们看到的东西不会是这么宁静的。所以我们要做的事情是：
@@ -164,42 +163,42 @@ $$
 ## 晃动水底
 把Default模式的ScreenPosition加上SceneColor节点之后、与浅水域颜色进行插值再输出到水面上，会得到水底的环境（现在我们终于能看清这条鱼长什么样子了）：
 
-<img src="https://ae01.alicdn.com/kf/S1ecfa77607f44b07a8cba99fd30ca4b2p.png" alt="挺可爱的" width="400" data-width="822" data-height="468">
+<img src="S1ecfa77607f44b07a8cba99fd30ca4b2p.webp" alt="挺可爱的" width="400" data-width="822" data-height="468">
 
 既然要晃动水底实现折射的效果，理所应当的我们会想到使用一个周期函数进行摇晃，而最常见的周期函数就是sin。把Time节点的sin（需要自行调整一下大小）与ScreenPosition相加之后，得到了这样的效果：
 
-<img src="https://tva4.sinaimg.cn/large/006UcwnJly1h66auzlycbg30pb09ob2a.gif" alt="sin" width="500" data-width="911" data-height="348">
+<img src="006UcwnJly1h66auzlycbg30pb09ob2a.gif" alt="sin" width="500" data-width="911" data-height="348">
 
 我们的水面也没有晃的那么厉害，折射所看到的box的虚影应该至少在晃动的同侧。可以把sin函数的范围从[-1,1]映射到[0,1]，保证同侧：
 
-<img src="https://ae01.alicdn.com/kf/S229563591b9441c6bfc1f54c3c579553w.gif" width="500" data-width="910" data-height="348">
-<img src="https://tva2.sinaimg.cn/large/006UcwnJly1h66b4bf1w5j30wz0aptaj.jpg" alt="image" width="1187" data-width="1187" data-height="385">
+<img src="S229563591b9441c6bfc1f54c3c579553w.gif" width="500" data-width="910" data-height="348">
+<img src="006UcwnJly1h66b4bf1w5j30wz0aptaj.jpg" alt="着色器图" width="1187" data-width="1187" data-height="385">
 
 ## 噪声扭曲
 现在就是最后一步，也就是扭曲水底的映像，得到水体波动扭曲的效果。实现方法是通过噪声生成法线(NormalFromHeight节点)，与ScreenPosition节点相加，再输出到片元着色器的base color节点上。诶，为什么Normal不是输出到Normal节点呢？因为NormalFromHeight节点使用的是屏幕空间求导得到节点（这也是为什么我们能把ScreenPosition与之相加），这在顶点着色器中不可用。
 
-<img src="https://tva1.sinaimg.cn/large/006UcwnJly1h66dfwinp2g30pa09o7wh.gif" alt="扭曲" width="500" data-width="910" data-height="348">
-<img src="https://ae01.alicdn.com/kf/S434eff5b821242bb98bfada9dc44d5cex.png" alt="着色器图" width="1263" data-width="1263" data-height="574">
+<img src="006UcwnJly1h66dfwinp2g30pa09o7wh.gif" alt="扭曲" width="500" data-width="910" data-height="348">
+<img src="S434eff5b821242bb98bfada9dc44d5cex.webp" alt="着色器图" width="1263" data-width="1263" data-height="574">
 
 我们几乎已经全部完成了。现在，把水体结果与水域分割、浮沫相加，再用saturate规范一下(因为我发现浮沫在开启bloom效果的情况下特别亮，说明有值太大了)：
 
-<img src="https://tva2.sinaimg.cn/large/006UcwnJly1h66dpe6b6sg30pa09o1ky.gif" alt="目前的效果" width="500" data-width="910" data-height="348">
-<img src="https://ae01.alicdn.com/kf/S0e5cb458451c4e7ca9ce69a62853d577Y.png" alt="着色器图" width="1918" data-width="1918" data-height="945">
+<img src="006UcwnJly1h66dpe6b6sg30pa09o1ky.gif" alt="目前的效果" width="500" data-width="910" data-height="348">
+<img src="S0e5cb458451c4e7ca9ce69a62853d577Y.webp" alt="着色器图" width="1918" data-width="1918" data-height="945">
 
 # 更新说明
 ## 2022/9/15 - 让水域分层面一起扭曲
 
-<img src="https://tva2.sinaimg.cn/large/006UcwnJly1h66dpe6b6sg30pa09o1ky.gif" alt="almost" width="450" data-width="910" data-height="348" style="display:inline"> <img src="https://tva2.sinaimg.cn/large/006UcwnJly1h67q5ckx75g31660fie84.gif" alt="change" width="470" data-width="1518" data-height="558" style="display:inline">
+<center><img src="006UcwnJly1h66dpe6b6sg30pa09o1ky.gif" alt="原本水域分层和折射的部分是分开的，显得很割裂" width="450" data-width="910" data-height="348" style="display:inline"> <img src="006UcwnJly1h67q5ckx75g31660fie84.gif" alt="修改后" width="470" data-width="1518" data-height="558" style="display:inline"></center>
 
 分层的面没有和折射的部分一起扭曲，显得很奇怪，于是我把用来扭曲折射的部分(加到SceneColor前面的那一大串)加到了深度节点的uv接口。
 
 ## 2022/9/15 - 为什么不加上焦散呢？
 
-<img src="https://ae01.alicdn.com/kf/Scf892eeb5b6b48d882948552f796fcd6T.gif" alt="change2" width="470" data-width="1518" data-height="558">
+<img src="Scf892eeb5b6b48d882948552f796fcd6T.gif" width="470" data-width="1518" data-height="558">
 
 焦散(Caustic)是一种光学现象。当观察游泳池或者其他清澈透亮的水体的时候，很容易在底部或者壁面发现这样的光纹，这就是焦散：
 
-<img src="https://ae01.alicdn.com/kf/S3e36038064314516b9a2807cb3c54a868.png" alt="caustic" width="400">
+<img src="S3e36038064314516b9a2807cb3c54a868.webp" alt="游泳池里的焦散" width="400">
 
 > A caustic is the envelope of light rays which have been reflected or refracted by a curved surface or object, or the projection of that envelope of rays on another surface.
 焦散是由曲面引起的光反射。一般来说，任何曲面都可以表现得像一个透镜，将光线聚焦在一些点上，并将其散射到其他点上。玻璃和水是允许它们形成的最常见的介质.
@@ -208,6 +207,6 @@ $$
 
 两次以不同程度的偏移来采样焦散噪声，并用min函数对两张贴图进行混合：
 
-<img src="https://ae01.alicdn.com/kf/Sb5ff4e47927a41b2a151080cce15fecdt.gif" alt="焦散效果" width="239" data-width="239" data-height="446">
+<img src="Sb5ff4e47927a41b2a151080cce15fecdt.gif" alt="焦散效果" width="239" data-width="239" data-height="446">
 
 让焦散的部分展示在浅水域，同时在uv采样时加上扭曲就ok力！
