--- a/source/_posts/程序棋盘格效果实现.md
+++ b/source/_posts/程序棋盘格效果实现.md
@@ -2,7 +2,7 @@
 tags: ['demo','Unreal','shader']
 title: 程序棋盘格效果实现
 date: '2022-01-21'
-categories: 探索发现
+categories: 效果实现
 cover: 20220121223454.jpg
 ---
 
