--- a/source/_posts/贴地雾效实现.md
+++ b/source/_posts/贴地雾效实现.md
@@ -1,7 +1,7 @@
 ---
 title: 贴地雾效实现
 tags: ['Unity','ShaderLab','shader','demo']
-categories: 探索发现
+categories: 效果实现
 date: '2022-02-07T08:20:39.263Z'
 cover: 20220207004948.png
 ---
