优化分类与标签

--- a/source/_posts/LD49复盘：游戏中的观察者模式.md
+++ b/source/_posts/LD49复盘：游戏中的观察者模式.md
@@ -1,6 +1,6 @@
 ---
 title: LD49复盘：游戏中的观察者模式
-tags: ['游戏编程','经验分享','项目复盘','Unity']
+tags: ['游戏编程','经验分享','项目复盘','设计模式','Unity']
 categories: 项目复盘
 date: '2021-10-07'
 updated: '2021-10-10'
