计网刷题笔记

--- a/study_notes/source/_posts/计算机网络.md
+++ b/study_notes/source/_posts/计算机网络.md
@@ -12,8 +12,8 @@ B站王道考研计算机网络系列课程的相关笔记
 <!-- more -->
 [计算机网络八股](/next/计算机网络八股/)
 [计算机网络(1) 整体概念介绍](/next/计算机网络-1-整体概念介绍/)
-[计算机网络(2) 物理层](/next/计算机网络-2-物理层/)
-计算机网络(3) 数据链路层
-计算机网络(4) 网络层
-计算机网络(5) 传输层
-计算机网络(6) 应用层
+[计算机网络(2) 物理层](/next/物理层/)
+[计算机网络(3) 数据链路层](/next/数据链路层)
+[计算机网络(4) 网络层](/next/网络层)
+[计算机网络(5) 传输层](/next/传输层)
+[计算机网络(6) 应用层](/next/应用层)
