--- a/study_notes/source/_posts/计算机网络八股.md
+++ b/study_notes/source/_posts/计算机网络八股.md
@@ -112,7 +112,7 @@ hidden: true
 
 {% note info 应用程序体系架构 %}
 应用程序体系体系架构主要分为两种。
-- C/S(client/server) ：客户端之间不进行通信，客户端向**服务端**发送请求获取数据，服务器要一直开机，需要配备大量的数据中心。比如：微信，google，bing等等。
+- C/S(client/server) ：客户端之间不进行通信，客户端向**服务端**发送请求获取数据，服务器要一直开机，需要配备大量的数据中心。比如：微信，google，bing等等。C/S可以更好地实现资源共享，并且能解决通信异步的问题。链路上只传输请求命令和执行结果，从而降低通信开销。
 - P2P(peer to peer) ：对等通信，不需要数据中心，没有客户端和服务端的区别，应用程序在间断连接的主机对之间直接通信。主要应用在流量密集型应用。比如：迅雷，bitTorrent，或者在局域网的文件内部共享应用中。
 
 目前大型互联网应用主要采用的是 C/S 架构，导致 P2P 架构逐渐被人遗忘。 C/S 架构又可以细分为 C/S(client/server) 和 B/S(browser/server)，即根据客户端类型划分。
@@ -143,7 +143,7 @@ web 是极为复杂的，不仅只有 client 与 server 之间简单的请求响
 {% endnote %}
 
 {% note danger dns是啥工作原理，主要解析过程是什么 %}
-域名系统 (dns,domain name system) 是 Internet 或其他 Internet 协议（ip） 网络中计算机、服务和其他资源的分层分布式命名系统。它将各种信息与分配给每个关联实体的域名相关联。最重要的是，它将容易记忆的域名转换为数字ip地址，用于定位和识别具有底层网络协议的计算机服务和设备。
+域名系统 (dns,domain name system) 是 Internet 或其他 Internet 协议（ip） 网络中计算机、服务和其他资源的分层分布式命名系统。它将各种信息与分配给每个关联实体的域名相关联。最重要的是，它将容易记忆的域名转换为数字ip地址，用于定位和识别具有底层网络协议的计算机服务和设备。DNS采用的是C/S架构。
 
 1. dns的作用
 在dns 出现之前，互联网中某台主机的唯一标识是这台机器的 ip 地址，但是这种方式记起来很麻烦，人们更喜欢便于记忆的名称。为了解决这个问题，人们需要一种从主机名称到 ip 地址转换的服务，域名系统作为将域名和 ip 地址相互映射的一个分布式数据库，能够使人更方便地访问互联网。
