替换文章封面图

--- a/source/_posts/状态同步.md
+++ b/source/_posts/状态同步.md
@@ -5,7 +5,7 @@ categories: 探索发现
 date: 2024-07-19
 updated: 2024-07-21
 top: false
-cover: Clipboard_2024-09-20-17-18-31.png
+cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA615419c5b83e4781e089aeb58a330391.png
 ---
 
 # 什么是网络同步
