--- a/source/_posts/状态同步.md
+++ b/source/_posts/状态同步.md
@@ -1,7 +1,7 @@
 ---
 tags: ['游戏编程','经验分享']
 title: 网络同步-基本概念介绍
-categories: 探索发现
+categories: 网络同步
 date: 2024-07-19
 updated: 2024-07-21
 top: false
@@ -95,6 +95,16 @@ cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA615419c5b83e4781e089
     - 帧同步：技术门槛高、维护成本高、研发周期短
     - 状态同步：技术门槛低、维护成本高（随着状态复杂而复杂化）、研发周期长
 
+以下是不同的同步方案适用的游戏类别，可以带着印象看后续的文章。
+
+| 游戏类型 | 最适用方案 | 原因 |
+| :----: | :----: | :---- |
+| 射击（FPS/TPS） | 分布式状态同步 | 对实时性要求高，要求玩家能立马看到结果（及时反馈），单局规模可能比较大 |
+| 即时战略（RTS） | 帧同步 | 需要同步同屏中的大量单位，采用帧同步只需要同步小部分操作指令 |
+| 多人竞技（MOBA） | 帧同步 | 对公平性要求较高、对误差要求高，帧同步可以保证多个客户端的误差很小 |
+| 多人角色扮演（MMORPG） | 服务器状态同步 | 角色数量多，对反作弊要求高 |
+| 休闲房间（棋牌） | 帧同步/服务器状态同步 | 实时性要求低、反作弊要求高。如果需要同步大量单位可以考虑帧同步 |
 
 # 参考资料
+百万在线：大型游戏服务端开发（罗培羽）
 https://gameinstitute.qq.com/course/detail/10242
