--- a/source/_posts/网络同步-帧同步.md
+++ b/source/_posts/网络同步-帧同步.md
@@ -1,7 +1,7 @@
 ---
 title: 网络同步-帧同步
 tags: ['游戏编程','网络','网络同步','帧同步','经验分享']
-categories: 探索发现
+categories: 网络同步
 date: 2024-07-21
 updated: 2024-07-23
 cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VAb49acb50f9dd74e2ce25c1154c36804a.png
@@ -51,11 +51,11 @@ cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VAb49acb50f9dd74e2ce25
   - 用户输入有限（一个用户就十个指头，手速有限）
 
 - **插值算法**
-根据两个状态，平滑地进行过度。插值其实是一个瘦时间影响的操作序列，主要起到视觉上的平滑效果，符合游戏规则。
+根据两个状态，平滑地进行过度。插值其实是一个受时间影响的操作序列，主要起到视觉上的平滑效果，符合游戏规则。
   - 使用录像数据进行与训练
   - 用户个性化样本训练
 
-除了这两种方法之外，我们还可以寻找**视觉掩饰**，例如设置前摇与后摇，提供缓冲时间。
+除了这两种方法之外，我们还可以通过**视觉掩饰**（例如设置前摇与后摇，提供缓冲时间）、设置**缓存队列**（缺点在于同步性可能大打折扣）等方式。
 
 但问题在于， Client1 在模拟时并不知道 Client2 可能提交了什么操作，因此它的模拟结果很可能是错的，该怎么办呢？在下一帧收到数据包时，Client1 有机会对结果进行修正，这种修正错误的方式通常叫做 **Reconcilation** / **和解**。
 
