--- a/source/_posts/反作弊.md
+++ b/source/_posts/反作弊.md
@@ -64,7 +64,9 @@ function onAttack(player, skillid)
 end
 ```
 
-无限技能也可能是外挂修改了游戏的内存（直接改动了技能的cd参数），我们可以对客户端的内存信息进行加密，或者使用内存地址偏移混淆、陷阱数据等方式增加作弊难度。
+无限技能也可能是外挂修改了游戏的内存（直接改动了技能的cd参数），导致客户端认为数据“合法”。面对这种情况，我们需要对客户的进行**保护**：
+- 采用腾讯ACE等工具检测游戏进程内存是否被篡改、防止dll注入、检测第三方工具
+- 我们可以对客户端的内存信息进行加密，或者使用内存地址偏移混淆、陷阱数据（诱导性的假数据）等方式增加作弊难度
 
 ## 广播信息
 在状态同步中，服务端计算指令的结果后需要向客户端广播新的状态以实现同步。然而在这一步，我们需要谨慎控制服务端广播的信息，因为发送的信息越多外挂能利用的资源就越多。比如棋牌游戏中，服务端向客户端广播所有手牌的信息，如果协议被破解，那么外挂玩家就可以看到对手的手牌。相应的改进措施也很简单，服务端只向玩家同步其自身卡片的状态变化即可。服务端应**最大限度地控制信息发送范围**，同时也能降低服务器网络IO负载。
