一图流背景，去掉了加载动画

--- a/source/_posts/在终面之后——更好的关卡系统.md
+++ b/source/_posts/在终面之后——更好的关卡系统.md
@@ -3,7 +3,7 @@ title: 在终面之后——更好的关卡系统
 date: 2024-12-12 00:48:43
 tags: ['游戏编程','经验分享','项目复盘','Unity','关卡','系统']
 categories: 项目复盘
-cover: https://b.bdstatic.com/comment/HPpFm-ziUYsgpwpjCcQ1VA1fc5ff9e9083059d3dab93de58d27b40.png
+cover: roomN.gif
 ---
 
 之前聊过了战斗系统的优化，今天聊聊《终面》中的关卡系统，关于我是如何实现的，以及应该怎么去优化它。
